tests/semantic/valid/70_i6_implicit_chain.hulk
type A(x: Number, y: Number) {}

type B inherits A {}

type C inherits B {}

let o = new C(1, 2) in print(o);
