tests/semantic/invalid/19_block_multi_let_without_in.hulk
let outer = 1 in { let x = 1; let x = 2; x };
